Add support for Maintenance plugin